--- a/main.tex
+++ b/main.tex
@@ -105,7 +105,7 @@ bottom=2cm,%
 		\end{center}
 
 		\noindent \textbf{Disclaimer:}\\
-		This  script only serves as additional material for practice purposes and should not serve as a substitute for the lecture material. We neither guarantee that this script covers all relevant topics for the exam, nor that it correct. If an attentive reader finds any mistakes or has any suggestions on how to improve the script, they are encouraged to contact the authors under the
+		This  script only serves as additional material for practice purposes and should not serve as a substitute for the lecture material. We neither guarantee that this script covers all relevant topics for the exam, nor that it is correct. If an attentive reader finds any mistakes or has any suggestions on how to improve the script, they are encouraged to contact the authors under the
 		indicated email address or, preferably, through a gitlab issue on https://gitlab.ethz.ch/vis/luk/pvw\_script\_pprog.
 	\end{titlepage}
     \makeatother
