--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 \documentclass[titlepage, dvipsnames]{article}
 
 \usepackage[%
+a4paper,%
 left=2.5cm,%
 right=2.5cm,%
 top=2cm,%
@@ -20,9 +21,6 @@ bottom=2cm,%
 \usepackage{wrapfig}
 \usepackage{multicol}
 \usepackage{transparent}
-
-%setting margins
-\usepackage[a4paper, total={16cm, 24cm}]{geometry}
 
 \graphicspath{ {./images/} }
 
