--- a/main.tex
+++ b/main.tex
@@ -23,11 +23,11 @@ bottom=2cm,%
 \usepackage{transparent}
 
 \usepackage[utf8]{inputenc}
-\usepackage[german]{babel}
+\usepackage[english]{babel}
 
 \usepackage{hyperref}
 \hypersetup{
-    colorlinks=true,
+    colorlinks=false,
     linkcolor=blue,
     filecolor=magenta,      
     urlcolor=cyan,
